src/objects/sf_devops__Pipeline_Stage__c.object
<CustomObject>
    <description>Represents one stage in the overall pipeline.  This will join an Environment with a branch in the VCS.</description>
    <fields>
        <fullName>sf_devops__Branch_Name__c</fullName>
        <description>This field is deprecated and should not be referenced</description>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Branch_Remote_Reference__c</fullName>
        <description>This field is deprecated and should not be referenced</description>
        <label>Branch Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The branch in the VCS that this stage is associated with.</description>
        <inlineHelpText>The branch in the VCS that this stage is associated with.</inlineHelpText>
        <label>Branch</label>
        <referenceTo>sf_devops__Branch__c</referenceTo>
        <relationshipLabel>Pipeline Stages</relationshipLabel>
        <relationshipName>Pipeline_Stages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The environment this stage is associated with.</description>
        <label>Environment</label>
        <referenceTo>sf_devops__Environment__c</referenceTo>
        <relationshipLabel>Pipeline Stages</relationshipLabel>
        <relationshipName>Pipeline_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Next_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The next stage in the pipeline.</description>
        <label>Next Stage</label>
        <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
        <relationshipLabel>Pipeline Stages</relationshipLabel>
        <relationshipName>Pipeline_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feedback for the asynchronous operation that is happening on this stage.</description>
        <label>Operation Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Pipeline Stages</relationshipLabel>
        <relationshipName>Pipeline_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Pipeline__c</fullName>
        <description>The pipeline this stage belongs to</description>
        <label>Pipeline</label>
        <referenceTo>sf_devops__Pipeline__c</referenceTo>
        <relationshipLabel>Pipeline Stages</relationshipLabel>
        <relationshipName>Pipeline_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Prerelease__c</fullName>
        <description>The last non-versioned stage in the pipeline that is used to create a version.</description>
        <formula>AND( NOT( sf_devops__Versioned__c ) ,  sf_devops__Next_Stage__r.sf_devops__Versioned__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prerelease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Promote_Review_Remote_Reference__c</fullName>
        <label>Promote Review Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Versioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Declares that this pipeline stage requires metadata to be installed via a change bundle.</description>
        <label>Versioned</label>
        <type>Checkbox</type>
    </fields>
    <label>Pipeline Stage</label>
    <nameField>
        <label>Pipeline Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__Branch_Without_Remote_Reference</fullName>
        <active>false</active>
        <description>This rule is no longer enforced</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Deprecated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__No_Changes_For_Active_Pipelines</fullName>
        <active>true</active>
        <description>Do not allow changes to a stage on an active pipeline</description>
        <errorConditionFormula>AND(
 OR (
    AND(
      ISCHANGED( sf_devops__Branch__c  ), 
      NOT(ISBLANK(PRIORVALUE(sf_devops__Branch__c)))
    ) ,
    ISCHANGED(  sf_devops__Environment__c  ) ,
    ISCHANGED(  sf_devops__Next_Stage__c  ) ,
    ISCHANGED(   sf_devops__Versioned__c   )
  ),
 sf_devops__Pipeline__r.sf_devops__Activated__c )</errorConditionFormula>
        <errorMessage>You cannot modify a Pipeline_Stage on an activated Pipeline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__No_New_Stages_For_Active_Pipelines</fullName>
        <active>true</active>
        <description>Do not allow new stages to be added to activated pipelines</description>
        <errorConditionFormula>AND( ISNEW(),
 sf_devops__Pipeline__r.sf_devops__Activated__c )</errorConditionFormula>
        <errorDisplayField>sf_devops__Pipeline__c</errorDisplayField>
        <errorMessage>You cannot add a Pipeline_Stage to an activated Pipeline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promote_Review_Remote_Ref_Required</fullName>
        <active>false</active>
        <description>This rule is no longer enforced</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Deprecated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promote_Review_Url_Required</fullName>
        <active>false</active>
        <description>This rule is no longer enforced</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Deprecated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promote_Review_Versioned</fullName>
        <active>true</active>
        <description>The promote Review can only be set on prerelease/versioned stage</description>
        <errorConditionFormula>AND(
 OR (
 ISCHANGED( sf_devops__Promote_Review_Remote_Reference__c ) ,
 ISCHANGED(   sf_devops__Versioned__c   ),
 ISCHANGED(   sf_devops__Prerelease__c   )
  ),
  NOT(OR(sf_devops__Versioned__c,sf_devops__Prerelease__c)),
  NOT(ISBLANK(sf_devops__Promote_Review_Remote_Reference__c))
)</errorConditionFormula>
        <errorDisplayField>sf_devops__Promote_Review_Remote_Reference__c</errorDisplayField>
        <errorMessage>You can only set the Promote Review on a versioned or prerelease pipeline stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Promote_Url_Validation</fullName>
        <active>false</active>
        <description>This rule is no longer enforced</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Deprecated</errorMessage>
    </validationRules>
</CustomObject>